Added a new statistics screen.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -17,9 +17,11 @@
   "evolution.config.default": "Default: %1$s",
   "evolution.config.label.client": "Client",
   "evolution.config.label.common": "Common",
+  "evolution.config.limitTimeUnitsToHour": "Limit Time Units to Hour",
+  "evolution.config.limitTimeUnitsToHour.comment": "Limits the time units in the statistics screen to hours, instead of days and years.",
   "evolution.config.range": "Range: %1$s",
   "evolution.config.torchTime": "Torch Time",
-  "evolution.config.torchTime.comment": "Define the time in game hours the torch will be lit for. 0 will disable unliting.",
+  "evolution.config.torchTime.comment": "Define the time in game hours the torch will be lit for.\n0 will disable unliting.",
   "forge.config.label.client": "Client",
   "forge.configgui.allowEmissiveItems": "Allow Emissive Items",
   "forge.configgui.allowEmissiveItems.comment": "Allow item rendering to detect emissive quads and draw them properly. This allows glowing blocks to look the same in item form, but incurs a very slight performance hit.",
@@ -42,12 +44,94 @@
   "command.evolution.date.success": "The date has been changed to %1$s",
   "command.evolution.tickrate": "The game tickrate was changed to %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
-  "key.prone.toggle": "Toggle Prone",
   "key.build_assist": "Build Assist",
+  "key.keyboard.left.control": "Left Control",
+  "key.keyboard.left.win": "Left Win",
+  "key.mouse.left": "Left Button",
+  "key.prone.toggle": "Toggle Prone",
   "COMMENT_ENTITIES": "_____________________________________________________________________________________________________________ENTITIES",
   "entity.evolution.cow": "Cow",
+  "entity.evolution.cow.plural": "Cows",
   "entity.evolution.player_corpse": "%1$s's Corpse",
   "entity.evolution.player_skeleton": "%1$s's Skeleton",
+  "entity.minecraft.bat.plural": "Bats",
+  "entity.minecraft.blaze.plural": "Blazes",
+  "entity.minecraft.cat.plural": "Cats",
+  "entity.minecraft.cave_spider": "Cave Spider",
+  "entity.minecraft.cave_spider.plural": "Cave Spiders",
+  "entity.minecraft.chicken.plural": "Chickens",
+  "entity.minecraft.cod.plural": "Cods",
+  "entity.minecraft.cow.plural": "Cows",
+  "entity.minecraft.creeper.plural": "Creepers",
+  "entity.minecraft.dolphin.plural": "Dolphins",
+  "entity.minecraft.donkey.plural": "Donkeys",
+  "entity.minecraft.drowned.plural": "Drowned",
+  "entity.minecraft.elder_guardian": "Elder Guardian",
+  "entity.minecraft.elder_guardian.plural": "Elder Guardians",
+  "entity.minecraft.ender_dragon": "Ender Dragon",
+  "entity.minecraft.ender_dragon.plural": "Ender Dragons",
+  "entity.minecraft.enderman.plural": "Endermen",
+  "entity.minecraft.endermite.plural": "Endermites",
+  "entity.minecraft.evoker.plural": "Evokers",
+  "entity.minecraft.fox.plural": "Foxes",
+  "entity.minecraft.ghast.plural": "Ghasts",
+  "entity.minecraft.giant": "Giant",
+  "entity.minecraft.giant.plural": "Giants",
+  "entity.minecraft.guardian.plural": "Guardians",
+  "entity.minecraft.horse.plural": "Horses",
+  "entity.minecraft.husk": "Husk",
+  "entity.minecraft.husk.plural": "Husks",
+  "entity.minecraft.illusioner.plural": "Illusioners",
+  "entity.minecraft.iron_golem": "Iron Golem",
+  "entity.minecraft.iron_golem.plural": "Iron Golems",
+  "entity.minecraft.llama.plural": "Llamas",
+  "entity.minecraft.magma_cube": "Magma Cube",
+  "entity.minecraft.magma_cube.plural": "Magma Cubes",
+  "entity.minecraft.mooshroom.plural": "Mooshrooms",
+  "entity.minecraft.mule.plural": "Mules",
+  "entity.minecraft.ocelot.plural": "Ocelots",
+  "entity.minecraft.panda.plural": "Pandas",
+  "entity.minecraft.parrot.plural": "Parrots",
+  "entity.minecraft.pig.plural": "Pigs",
+  "entity.minecraft.pillager.plural": "Pillagers",
+  "entity.minecraft.player.plural": "Players",
+  "entity.minecraft.polar_bear": "Polar Bear",
+  "entity.minecraft.polar_bear.plural": "Polar Bears",
+  "entity.minecraft.pufferfish.plural": "Pufferfish",
+  "entity.minecraft.rabbit.plural": "Rabbits",
+  "entity.minecraft.ravager.plural": "Ravagers",
+  "entity.minecraft.salmon.plural": "Salmons",
+  "entity.minecraft.sheep.plural": "Sheep",
+  "entity.minecraft.shulker.plural": "Shulkers",
+  "entity.minecraft.silverfish.plural": "Silverfish",
+  "entity.minecraft.skeleton.plural": "Skeletons",
+  "entity.minecraft.skeleton_horse": "Skeleton Horse",
+  "entity.minecraft.skeleton_horse.plural": "Skeleton Horses",
+  "entity.minecraft.slime.plural": "Slimes",
+  "entity.minecraft.snow_golem": "Snow Golem",
+  "entity.minecraft.snow_golem.plural": "Snow Golems",
+  "entity.minecraft.spider.plural": "Spiders",
+  "entity.minecraft.squid.plural": "Squids",
+  "entity.minecraft.stray": "Stray",
+  "entity.minecraft.stray.plural": "Strays",
+  "entity.minecraft.tropical_fish": "Tropical Fish",
+  "entity.minecraft.tropical_fish.plural": "Tropical Fish",
+  "entity.minecraft.turtle.plural": "Turtles",
+  "entity.minecraft.vex.plural": "Vexes",
+  "entity.minecraft.villager.plural": "Villagers",
+  "entity.minecraft.vindicator.plural": "Vindicators",
+  "entity.minecraft.witch.plural": "Witches",
+  "entity.minecraft.wither.plural": "Withers",
+  "entity.minecraft.wither_skeleton": "Wither Skeleton",
+  "entity.minecraft.wither_skeleton.plural": "Wither Skeletons",
+  "entity.minecraft.wolf.plural": "Wolves",
+  "entity.minecraft.zombie.plural": "Zombies",
+  "entity.minecraft.zombie_horse": "Zombie Horse",
+  "entity.minecraft.zombie_horse.plural": "Zombie Horses",
+  "entity.minecraft.zombie_pigman": "Zombie Pigman",
+  "entity.minecraft.zombie_pigman.plural": "Zombie Pigmen",
+  "entity.minecraft.zombie_villager": "Zombie Villager",
+  "entity.minecraft.zombie_villager.plural": "Zombie Villagers",
   "COMMENT_SPAWN_EGGS": "_________________________________________________________________________________________________________SPAWN EGGS",
   "item.evolution.cow_spawn_egg": "Cow Spawn Egg",
   "COMMENT_STATUS EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
@@ -132,8 +216,12 @@
   "death.attack.falling_tree": "%1$s didn't see the falling tree",
   "death.attack.falling_wood": "%1$s was crushed by a falling piece of wood",
   "death.attack.hook": "%1$s was hooked by %2$s",
+  "death.attack.in_fire": "%1$s went up in flames",
+  "death.attack.in_wall": "%1$s suffocated in a wall",
+  "death.attack.on_fire": "%1$s burned to death",
   "death.attack.spear": "%1$s was impaled by %2$s",
   "death.attack.spear.item": "%1$s was impaled by %2$s using %3$s",
+  "death.attack.void": "%1$s fell into the Void",
   "death.attack.wall_impact": "%1$s experienced kinetic energy",
   "death.attack.wall_impact.player": "%1$s was thrown against a wall while fighting %2$s",
   "death.attack.water_impact": "%1$s hit water too hard",
@@ -170,6 +258,80 @@
   "evolution.advancements.general.definitely_a_rock.description": "Pick up a rock",
   "evolution.advancements.general.knapping.title": "Knapping",
   "evolution.advancements.general.knapping.description": "Use a rock in a knapping block to shape it into something useful",
+  "COMMENT_STATS": "___________________________________________________________________________________________________________________STATS",
+  "stat.damageButton": "Damage",
+  "stat.deathButton": "Deaths",
+  "stat.distanceButton": "Distance",
+  "stat.timeButton": "Time",
+  "stat.evolution.chests_opened": "Chests Opened",
+  "stat.evolution.items_dropped": "Items Dropped",
+  "stat.evolution.items_thrown": "Items Thrown",
+  "stat.evolution.jumps": "Jumps",
+  "stat.evolution.leave_game": "Times Left the Game",
+  "stat.evolution.mob_kills": "Mob Kills",
+  "stat.evolution.player_kills": "Player Kills",
+  "stat.evolution.times_knapping": "Times Knapping",
+  "stat.evolution.times_slept": "Times Slept",
+  "stat.evolution.death_arrow": "Death by Arrow Shots",
+  "stat.evolution.death_dehydration": "Death by Dehydration",
+  "stat.evolution.death_doomed_to_fall": "Death by Being Doomed to Fall",
+  "stat.evolution.death_drown": "Death by Drowning",
+  "stat.evolution.death_fall": "Death by Fall",
+  "stat.evolution.death_fall_then_finished": "Death by Falling Too Far and Being Finished",
+  "stat.evolution.death_falling_metal": "Death by Being Crushed by Falling Metal",
+  "stat.evolution.death_falling_rock": "Death by Being Crushed by Falling Rocks",
+  "stat.evolution.death_falling_soil": "Death by Being Buried by Landslide",
+  "stat.evolution.death_falling_tree": "Death by Being Crushed by Falling Trees",
+  "stat.evolution.death_falling_wood": "Death by Being Crushed by Falling Wood",
+  "stat.evolution.death_hook": "Death by Being Hooked",
+  "stat.evolution.death_in_fire": "Death by Flames",
+  "stat.evolution.death_in_wall": "Death by Suffocation in Walls",
+  "stat.evolution.death_on_fire": "Death by Burning",
+  "stat.evolution.death_player": "Death by Players",
+  "stat.evolution.death_spear": "Death by Being Impaled",
+  "stat.evolution.death_total": "Total Number of Deaths",
+  "stat.evolution.death_void": "Death by Falling into the Void",
+  "stat.evolution.death_wall_impact": "Death by Kinetic Energy",
+  "stat.evolution.death_water_impact": "Death by Hitting Water",
+  "stat.evolution.death_water_intoxication": "Death by Water Intoxication",
+  "stat.evolution.distance_climbed": "Distance Climbed",
+  "stat.evolution.distance_crouched": "Distance Crouched",
+  "stat.evolution.distance_fallen": "Distance Fallen",
+  "stat.evolution.distance_flown": "Distance Flown",
+  "stat.evolution.distance_jumped_horizontal": "Distance Jumped Horizontally",
+  "stat.evolution.distance_jumped_vertical": "Distance Jumped Vertically",
+  "stat.evolution.distance_prone": "Distance on Prone",
+  "stat.evolution.distance_sprinted": "Distance Sprinted",
+  "stat.evolution.distance_swum": "Distance Swum",
+  "stat.evolution.distance_total_animal_ridden": "Total Distance by Animals",
+  "stat.evolution.distance_total_traveled": "Total Distance Traveled",
+  "stat.evolution.distance_total_vehicle_ridden": "Total Distance by Vehicles",
+  "stat.evolution.distance_walked": "Distance Walked",
+  "stat.evolution.distance_walked_on_water": "Distance Walked on Water",
+  "stat.evolution.distance_walked_under_water": "Distance Walked under Water",
+  "stat.evolution.time_played": "Time Played",
+  "stat.evolution.time_since_last_death": "Time since Last Death",
+  "stat.evolution.time_since_last_rest": "Time since Last Rest",
+  "stat.evolution.time_sneaking": "Time Sneaking",
+  "stat_type.evolution.damage_dealt_actual": "Actual Damage Dealt",
+  "stat_type.evolution.damage_dealt_raw": "Raw Damage Dealt",
+  "stat_type.evolution.damage_taken_actual": "Actual Damage Taken",
+  "stat_type.evolution.damage_taken_blocked": "Damage Blocked",
+  "stat_type.evolution.damage_taken_raw": "Raw Damage Taken",
+  "stat_type.evolution.damage_dealt": "You dealt %1$s of damage to %2$s",
+  "stat_type.evolution.damage_dealt.name": "Damage dealt",
+  "stat_type.evolution.damage_dealt.none": "You have never dealt damage to %1$s",
+  "stat_type.evolution.damage_taken": "You took %1$s of damage from %2$s",
+  "stat_type.evolution.damage_taken.name": "Damage taken",
+  "stat_type.evolution.damage_taken.none": "You have never taken damage from %1$s",
+  "stat_type.minecraft.killed": "You killed %1$s %2$s",
+  "stat_type.minecraft.killed.name": "Times you killed",
+  "stat_type.minecraft.killed.none": "You have never killed %1$s",
+  "stat_type.minecraft.killed.once": "You killed 1 %1$s",
+  "stat_type.minecraft.killed_by": "%1$s killed you %2$s times",
+  "stat_type.minecraft.killed_by.name": "Times you got killed",
+  "stat_type.minecraft.killed_by.none": "You have never been killed by %1$s",
+  "stat_type.minecraft.killed_by.once": "%1%s killed you once",
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
   "evolution.gui.add_value": "Add...",
   "evolution.gui.crash": "Minecraft crashed!",
@@ -248,10 +410,19 @@
   "evolution.tooltop.container.amount": "%2$s: %1$s",
   "evolution.tooltip.container.capacity": "Capacity: %1$s",
   "evolution.tooltip.container.empty": "Empty",
-  "evolution.tooltip.damage.generic": "%1$s Attack Damage",
   "evolution.tooltip.damage.crushing": "%1$s Crushing Damage",
+  "evolution.tooltip.damage.drowning": "%1$s Drowning Damage",
+  "evolution.tooltip.damage.fire": "%1$s Fire Damage",
+  "evolution.tooltip.damage.generic": "%1$s Attack Damage",
+  "evolution.tooltip.damage.impact": "%1$s Impact Damage",
+  "evolution.tooltip.damage.melee": "%1$s Melee Damage",
   "evolution.tooltip.damage.piercing": "%1$s Piercing Damage",
+  "evolution.tooltip.damage.ranged": "%1$s Ranged Damage",
+  "evolution.tooltip.damage.sickness": "%1$s Sickness Damage",
   "evolution.tooltip.damage.slashing": "%1$s Slashing Damage",
+  "evolution.tooltip.damage.suffocation": "%1$s Suffocation Damage",
+  "evolution.tooltip.damage.total": "%1$s Total Damage",
+  "evolution.tooltip.damage.void": "%1$s Void Damage",
   "evolution.tooltip.distance": "%1$s Reach Distance",
   "evolution.tooltip.durability": "%1$s Durability",
   "evolution.tooltip.fire_aspect": " ► %1$s Fire Aspect %2$s",
