--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -17,9 +17,11 @@
   "evolution.config.default": "Padrão: %1$s",
   "evolution.config.label.client": "Client",
   "evolution.config.label.common": "Geral",
+  "evolution.config.limitTimeUnitsToHour": "Limitar Unidades de Tempo para Hora",
+  "evolution.config.limitTimeUnitsToHour.comment": "Limita as unidades de tempo na tela de estatísticas para horas, ao invés de dias e anos.",
   "evolution.config.range": "Intervalo: %1$s",
   "evolution.config.torchTime": "Tempo da Tocha",
-  "evolution.config.torchTime.comment": "Define o tempo pelo qual a tocha ficará acessa, em horas dentro do jogo. 0 vai desabilitar que elas apaguem.",
+  "evolution.config.torchTime.comment": "Define o tempo pelo qual a tocha ficará acessa, em horas dentro do jogo.\n0 vai desabilitar que elas apaguem.",
   "forge.config.label.client": "Client",
   "forge.configgui.allowEmissiveItems": "Permitir Itens Emissivos",
   "forge.configgui.allowEmissiveItems.comment": "Permitir que a renderização de itens detecte quadriláteros emissivos e desenhe-os adequadamente. Isso permite que blocos brilhantes pareçam iguais em forma de item, mas causa um leve impacto de performance.",
@@ -42,12 +44,94 @@
   "command.evolution.date.success": "A data foi mudada para %1$s",
   "command.evolution.tickrate": "A tickrate do jogo foi mudada para %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
-  "key.prone.toggle": "Alternar rastejar",
   "key.build_assist": "Assistente de construção",
+  "key.keyboard.left.control": "Ctrl esquerdo",
+  "key.keyboard.left.win": "Windows esquerdo",
+  "key.mouse.left": "Botão esquerdo",
+  "key.prone.toggle": "Alternar rastejar",
   "COMMENT_ENTITIES": "_____________________________________________________________________________________________________________ENTITIES",
   "entity.evolution.cow": "Vaca",
+  "entity.evolution.cow.plural": "Vacas",
   "entity.evolution.player_corpse": "Cadáver de %1$s",
   "entity.evolution.player_skeleton": "Esqueleto de %1$s",
+  "entity.minecraft.bat.plural": "Morcegos",
+  "entity.minecraft.blaze.plural": "Blazes",
+  "entity.minecraft.cat.plural": "Gatos",
+  "entity.minecraft.cave_spider": "Aranha de Caverna",
+  "entity.minecraft.cave_spider.plural": "Aranhas de Caverna",
+  "entity.minecraft.chicken.plural": "Galinhas",
+  "entity.minecraft.cod.plural": "Bacalhaus",
+  "entity.minecraft.cow.plural": "Vacas",
+  "entity.minecraft.creeper.plural": "Creepers",
+  "entity.minecraft.dolphin.plural": "Golfinhos",
+  "entity.minecraft.donkey.plural": "Burros",
+  "entity.minecraft.drowned.plural": "Afogados",
+  "entity.minecraft.elder_guardian": "Guardião Ancião",
+  "entity.minecraft.elder_guardian.plural": "Guardiões Anciões",
+  "entity.minecraft.ender_dragon": "Dragão do Fim",
+  "entity.minecraft.ender_dragon.plural": "Dragões do Fim",
+  "entity.minecraft.enderman.plural": "Endermen",
+  "entity.minecraft.endermite.plural": "Endermites",
+  "entity.minecraft.evoker.plural": "Invocador",
+  "entity.minecraft.fox.plural": "Raposas",
+  "entity.minecraft.ghast.plural": "Ghasts",
+  "entity.minecraft.giant": "Gigante",
+  "entity.minecraft.giant.plural": "Gigantes",
+  "entity.minecraft.guardian.plural": "Guardião",
+  "entity.minecraft.horse.plural": "Cavalos",
+  "entity.minecraft.husk": "Zumbi Múmia",
+  "entity.minecraft.husk.plural": "Zumbis Múmias",
+  "entity.minecraft.illusioner.plural": "Ilusionistas",
+  "entity.minecraft.iron_golem": "Golem de Ferro",
+  "entity.minecraft.iron_golem.plural": "Golens de Ferro",
+  "entity.minecraft.llama.plural": "Lhamas",
+  "entity.minecraft.magma_cube": "Cubo de Magma",
+  "entity.minecraft.magma_cube.plural": "Cubos de Magma",
+  "entity.minecraft.mooshroom.plural": "Coguvacas",
+  "entity.minecraft.mule.plural": "Mulas",
+  "entity.minecraft.ocelot.plural": "Jaguatiricas",
+  "entity.minecraft.panda.plural": "Pandas",
+  "entity.minecraft.parrot.plural": "Papagaios",
+  "entity.minecraft.pig.plural": "Porcos",
+  "entity.minecraft.pillager.plural": "Saqueadores",
+  "entity.minecraft.player.plural": "Jogadores",
+  "entity.minecraft.polar_bear": "Urso Polar",
+  "entity.minecraft.polar_bear.plural": "Ursos Polares",
+  "entity.minecraft.pufferfish.plural": "Baiacus",
+  "entity.minecraft.rabbit.plural": "Coelhos",
+  "entity.minecraft.ravager.plural": "Devastadores",
+  "entity.minecraft.salmon.plural": "Salmões",
+  "entity.minecraft.sheep.plural": "Ovelhas",
+  "entity.minecraft.shulker.plural": "Shulkers",
+  "entity.minecraft.silverfish.plural": "Traças",
+  "entity.minecraft.skeleton.plural": "Esqueletos",
+  "entity.minecraft.skeleton_horse": "Cavalo Esqueleto",
+  "entity.minecraft.skeleton_horse.plural": "Cavalos Esqueletos",
+  "entity.minecraft.slime.plural": "Slimes",
+  "entity.minecraft.snow_golem": "Golem de Neve",
+  "entity.minecraft.snow_golem.plural": "Golens de Neve",
+  "entity.minecraft.spider.plural": "Aranhas",
+  "entity.minecraft.squid.plural": "Lulas",
+  "entity.minecraft.stray": "Esqueleto Errante",
+  "entity.minecraft.stray.plural": "Esqueletos Errantes",
+  "entity.minecraft.tropical_fish": "Peixe Tropical",
+  "entity.minecraft.tropical_fish.plural": "Peixes Tropicais",
+  "entity.minecraft.turtle.plural": "Tartarugas",
+  "entity.minecraft.vex.plural": "Vexes",
+  "entity.minecraft.villager.plural": "Aldeões",
+  "entity.minecraft.vindicator.plural": "Vingadores",
+  "entity.minecraft.witch.plural": "Bruxas",
+  "entity.minecraft.wither.plural": "Withers",
+  "entity.minecraft.wither_skeleton": "Esqueleto do Wither",
+  "entity.minecraft.wither_skeleton.plural": "Esqueletos do Wither",
+  "entity.minecraft.wolf.plural": "Lobos",
+  "entity.minecraft.zombie.plural": "Zumbis",
+  "entity.minecraft.zombie_horse": "Cavalo Zumbi",
+  "entity.minecraft.zombie_horse.plural": "Cavalos Zumbis",
+  "entity.minecraft.zombie_pigman": "Homem Porco Zumbi",
+  "entity.minecraft.zombie_pigman.plural": "Homens Porcos Zumbis",
+  "entity.minecraft.zombie_villager": "Aldeão Zumbi",
+  "entity.minecraft.zombie_villager.plural": "Aldeões Zumbis",
   "COMMENT_SPAWN_EGGS": "_________________________________________________________________________________________________________SPAWN EGGS",
   "item.evolution.cow_spawn_egg": "Ovo Gerador de Vaca",
   "COMMENT_STATUS_EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
@@ -132,8 +216,12 @@
   "death.attack.falling_tree": "%1$s não viu a árvore caindo",
   "death.attack.falling_wood": "%1$s foi esmagado(a) por um pedaço de madeira caindo",
   "death.attack.hook": "%1$s foi enganchado(a) por %2$s",
+  "death.attack.in_fire": "%1$s foi incinerado(a)",
+  "death.attack.in_wall": "%1$s sufocou numa parede",
+  "death.attack.on_fire": "%1$s morreu carbonizado(a)",
   "death.attack.spear": "%1$s foi empalado(a) por %2$s",
   "death.attack.spear.item": "%1$s foi empalado(a) por %2$s com %3$s",
+  "death.attack.void": "%1$s caiu no Vazio",
   "death.attack.wall_impact": "%1$s experimentou a energia cinética",
   "death.attack.wall_impact.player": "%1$s foi jogado(a) contra uma parede enquanto lutava com %2$s",
   "death.attack.water_impact": "%1$s bateu na água com muita força",
@@ -170,6 +258,80 @@
   "evolution.advancements.general.definitely_a_rock.description": "Pegue uma pedra",
   "evolution.advancements.general.knapping.title": "Lascar",
   "evolution.advancements.general.knapping.description": "Use uma pedra num bloco de lascar para transformá-lo em algo útil",
+  "COMMENT_STATS": "___________________________________________________________________________________________________________________STATS",
+  "stat.damageButton": "Dano",
+  "stat.deathButton": "Mortes",
+  "stat.distanceButton": "Distância",
+  "stat.timeButton": "Tempo",
+  "stat.evolution.chests_opened": "Baús Abertos",
+  "stat.evolution.items_dropped": "Itens Largados",
+  "stat.evolution.items_thrown": "Itens Arremessados",
+  "stat.evolution.jumps": "Pulos",
+  "stat.evolution.leave_game": "Vezes que Saiu do Jogo",
+  "stat.evolution.mob_kills": "Criaturas Mortas",
+  "stat.evolution.player_kills": "Jogadores Mortos",
+  "stat.evolution.times_knapping": "Vezes que Lascou Pedra",
+  "stat.evolution.times_slept": "Vezes que Dormiu",
+  "stat.evolution.death_arrow": "Morte por Flechadas",
+  "stat.evolution.death_dehydration": "Morte por Desidratação",
+  "stat.evolution.death_doomed_to_fall": "Morte por ser Condenado a Cair",
+  "stat.evolution.death_drown": "Morte por Afogamento",
+  "stat.evolution.death_fall": "Morte por Queda",
+  "stat.evolution.death_fall_then_finished": "Morte por Cair de Muito Alto e ser Finalizado",
+  "stat.evolution.death_falling_metal": "Morte por ser Esmagado por Metal Caindo",
+  "stat.evolution.death_falling_rock": "Morte por ser Esmagado por Pedras Caindo",
+  "stat.evolution.death_falling_soil": "Morte por ser Soterrado",
+  "stat.evolution.death_falling_tree": "Morte por ser Esmagado por Árvores Caindo",
+  "stat.evolution.death_falling_wood": "Morte por ser Esmagado por Madeira Caindo",
+  "stat.evolution.death_hook": "Morte por ser Enganchado",
+  "stat.evolution.death_in_fire": "Morte por Incineração",
+  "stat.evolution.death_in_wall": "Morte por Sufocamento em Paredes",
+  "stat.evolution.death_on_fire": "Morte por Carbonização",
+  "stat.evolution.death_player": "Morte por Jogadores",
+  "stat.evolution.death_spear": "Morte por ser Empalado",
+  "stat.evolution.death_total": "Número Total de Mortes",
+  "stat.evolution.death_void": "Morte por Cair no Vazio",
+  "stat.evolution.death_wall_impact": "Morte por Energia Cinética",
+  "stat.evolution.death_water_impact": "Morte por Bater na Água",
+  "stat.evolution.death_water_intoxication": "Morte por Intoxicação por Água",
+  "stat.evolution.distance_climbed": "Distância Escalada",
+  "stat.evolution.distance_crouched": "Distância Agachada",
+  "stat.evolution.distance_fallen": "Distância Caída",
+  "stat.evolution.distance_flown": "Distância Voada",
+  "stat.evolution.distance_jumped_horizontal": "Distância Pulada Horizontalmente",
+  "stat.evolution.distance_jumped_vertical": "Distância Pulada Verticalmente",
+  "stat.evolution.distance_prone": "Distância Rastejada",
+  "stat.evolution.distance_sprinted": "Distância Corrida",
+  "stat.evolution.distance_swum": "Distância Nadada",
+  "stat.evolution.distance_total_animal_ridden": "Distância Total a Animais",
+  "stat.evolution.distance_total_traveled": "Distância Total",
+  "stat.evolution.distance_total_vehicle_ridden": "Distância Total a Veículos",
+  "stat.evolution.distance_walked": "Distância Andada",
+  "stat.evolution.distance_walked_on_water": "Distância Andada sobre a Água",
+  "stat.evolution.distance_walked_under_water": "Distância Andada embaixo d'Água",
+  "stat.evolution.time_played": "Tempo Jogado",
+  "stat.evolution.time_since_last_death": "Tempo desde a Última Morte",
+  "stat.evolution.time_since_last_rest": "Tempo desde o Último Descanço",
+  "stat.evolution.time_sneaking": "Tempo Agachado",
+  "stat_type.evolution.damage_dealt_actual": "Dano Causado Real",
+  "stat_type.evolution.damage_dealt_raw": "Dano Causado Bruto",
+  "stat_type.evolution.damage_taken_actual": "Dano Tomado Real",
+  "stat_type.evolution.damage_taken_blocked": "Dano Bloqueado",
+  "stat_type.evolution.damage_taken_raw": "Dano Tomado Bruto",
+  "stat_type.evolution.damage_dealt": "Você causou %1$s de dano em %2$s",
+  "stat_type.evolution.damage_dealt.name": "Dano causado",
+  "stat_type.evolution.damage_dealt.none": "Você nunca causou dano em %1$s",
+  "stat_type.evolution.damage_taken": "Você tomou %1$s de dano de %2$s",
+  "stat_type.evolution.damage_taken.name": "Dano tomado",
+  "stat_type.evolution.damage_taken.none": "Você nunca tomou dano de %1$s",
+  "stat_type.minecraft.killed": "Você matou %1$s %2$s",
+  "stat_type.minecraft.killed.name": "Vezes que você matou",
+  "stat_type.minecraft.killed.none": "Você nunca matou %1$s",
+  "stat_type.minecraft.killed.once": "Você matou 1 %1$s",
+  "stat_type.minecraft.killed_by": "%1$s mataram você %2$s vezes",
+  "stat_type.minecraft.killed_by.name": "Vezes que você foi morto",
+  "stat_type.minecraft.killed_by.none": "Você nunca foi morto por %1$s",
+  "stat_type.minecraft.killed_by.once": "%1%s mataram você uma vez",
   "COMMENT_GUIS": "_____________________________________________________________________________________________________________________GUIs",
   "evolution.gui.add_value": "Adicionar...",
   "evolution.gui.crash": "Minecraft crashou!",
@@ -248,10 +410,19 @@
   "evolution.tooltop.container.amount": "%2$s: %1$s",
   "evolution.tooltip.container.capacity": "Capacidade: %1$s",
   "evolution.tooltip.container.empty": "Vazio",
-  "evolution.tooltip.damage.generic": "%1$s Dano de Ataque",
   "evolution.tooltip.damage.crushing": "%1$s Dano Esmagante",
+  "evolution.tooltip.damage.drowning": "%1$s Dano de Afogamento",
+  "evolution.tooltip.damage.fire": "%1$s Dano de Fogo",
+  "evolution.tooltip.damage.generic": "%1$s Dano de Ataque",
+  "evolution.tooltip.damage.impact": "%1$s Dano de Impacto",
+  "evolution.tooltip.damage.melee": "%1$s Dano Corpo a Corpo",
   "evolution.tooltip.damage.piercing": "%1$s Dano Penetrante",
+  "evolution.tooltip.damage.ranged": "%1$s Dano à Distância",
+  "evolution.tooltip.damage.sickness": "%1$s Dano de Doença",
   "evolution.tooltip.damage.slashing": "%1$s Dano Cortante",
+  "evolution.tooltip.damage.suffocation": "%1$s Dano de Sufocamento",
+  "evolution.tooltip.damage.total": "%1$s Dano Total",
+  "evolution.tooltip.damage.void": "%1$s Dano do Vazio",
   "evolution.tooltip.distance": "%1$s Distância de Alcance",
   "evolution.tooltip.durability": "%1$s Durabilidade",
   "evolution.tooltip.fire_aspect": " ► %1$s Aspecto Flamejante %2$s",
