--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -149,14 +149,25 @@
   "COMMENT_SPAWN_EGGS": "_________________________________________________________________________________________________________SPAWN EGGS",
   "item.evolution.cow_spawn_egg": "Cow Spawn Egg",
   "COMMENT_STATUS EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
+  "effect.evolution.dehydration": "Dehydration",
+  "effect.evolution.dehydration.desc.0": "Your deficient water intake has caused lack of water in your body, which will compromise basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n\nMay cause:\n ► Dizziness",
+  "effect.evolution.dehydration.desc.1": "Your deficient water intake has caused lack of water in your body, which has compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness",
+  "effect.evolution.dehydration.desc.2": "Your deficient water intake has caused lack of water in your body, which has severely compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness\n\nIn addition, you take 1HP of damage every 80 ticks.",
+  "effect.evolution.dehydration.desc.3": "Your deficient water intake has caused lack of water in your body, which has severely compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness\n\nIn addition, you take 1HP of damage every 40 ticks.",
+  "effect.evolution.dehydration.desc.4": "Your deficient water intake has caused lack of water in your body, which has severely compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness\n\nIn addition, you take 1HP of damage every 20 ticks.",
+  "effect.evolution.dehydration.desc.5": "Your deficient water intake has caused lack of water in your body, which has severely compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness\n\nIn addition, you take 1HP of damage every 10 ticks.",
+  "effect.evolution.dehydration.desc.6": "Your deficient water intake has caused lack of water in your body, which has severely compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness\n\nIn addition, you take 1HP of damage every 5 ticks.",
+  "effect.evolution.dehydration.desc.7": "Your deficient water intake has caused lack of water in your body, which has severely compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness\n\nIn addition, you take 1HP of damage every 2 ticks.",
+  "effect.evolution.dehydration.desc.8": "Your deficient water intake has caused lack of water in your body, which has severely compromised basic metabolic functions.\n\nCauses:\n ► Disables natural health regeneration\n ► Disables your ability to sprint\n ► Increases stamina consumption\n ► Slowness\n\nMay cause:\n ► Dizziness\n\nIn addition, you take 1HP of damage every tick.",
   "effect.evolution.disoriented": "Disoriented",
   "effect.evolution.dizziness": "Dizziness",
   "effect.evolution.hydration": "Hydration",
-  "effect.evolution.hydration.desc": "Replenishes your thirst bar by 1 point per level every tick.",
+  "effect.evolution.hydration.desc": "Replenishes your thirst bar by 1 point per [level] every tick.",
   "effect.evolution.thirst": "Thirst",
-  "effect.evolution.thirst.desc": "You feel thirsty and consume 10% more water per level.",
+  "effect.evolution.thirst.desc": "You feel thirsty and consume 10% more water per [level].",
   "effect.evolution.water_intoxication": "Water Intoxication",
-  "effect.evolution.water_intoxication.desc": "Your excessive water intake pushed the normal balance of electrolytes in the body outside safe limits, potentially disturbing brain functions.\n\nMay cause:\n ► Nausea\n ► Weakness",
+  "effect.evolution.water_intoxication.desc.0": "Your excessive water intake pushed the normal balance of electrolytes in the body outside safe limits, potentially disturbing brain functions.\n\nMay cause:\n ► Nausea\n ► Weakness",
+  "effect.evolution.water_intoxication.desc.1": "Your excessive water intake pushed the normal balance of electrolytes in the body outside safe limits, which has disturbed brain functions.\n\nMay cause:\n ► Nausea\n ► Weakness\n\nIn addition, you take [level - 1]HP of damage every 40 ticks.",
   "effect.minecraft.absorption.desc": "Grants 4HP of additional health per level. Additional health cannot be regenerated.",
   "effect.minecraft.bad_omen.desc": "You have a feeling that something bad is coming.",
   "effect.minecraft.blindness.desc": "Your vision is impaired.",
@@ -165,17 +176,17 @@
   "effect.minecraft.fire_resistance": "Fire Resistance",
   "effect.minecraft.fire_resistance.desc": "Grants immunity to fire damage.",
   "effect.minecraft.glowing.desc": "You are glowing and your outline can be seen through walls.",
-  "effect.minecraft.haste.desc": "Increases attack speed by 10% per level. Increases mining speed by 20% per level.",
-  "effect.minecraft.health_boost.desc": "Increases your health by 4HP per level.",
+  "effect.minecraft.haste.desc": "Increases attack speed by 10% per [level]. Increases mining speed by 20% per [level].",
+  "effect.minecraft.health_boost.desc": "Increases your health by 4HP per [level].",
   "effect.minecraft.hero_of_the_village.desc": "You saved the village!\nPrices will be lower for you. You may receive gifts from those you saved.",
   "effect.minecraft.hunger.desc": "You feel hungry and burn more calories.",
-  "effect.minecraft.instant_damage.desc": "Inflicts 3 * 2^level HP of instant magic damage on living creatures. For undead creatures, it heals them instead.",
-  "effect.minecraft.instant_health.desc": "Heals living creatures for 2 * 2^level HP instantly. Undead creatures will be damaged instead.",
+  "effect.minecraft.instant_damage.desc": "Inflicts [3 * 2^level]HP of instant magic damage on living creatures. For undead creatures, it heals them instead.",
+  "effect.minecraft.instant_health.desc": "Heals living creatures for [2 * 2^level]HP instantly. Undead creatures will be damaged instead.",
   "effect.minecraft.invisibility.desc": "Renders you completely invisible. It does not render your equipment invisible, however.",
-  "effect.minecraft.jump_boost.desc": "Increases jump strength by 10% per level.",
+  "effect.minecraft.jump_boost.desc": "Increases jump strength by 10% per [level].",
   "effect.minecraft.levitation.desc": "You become less dense than air and start to float.",
-  "effect.minecraft.luck.desc": "Increases your luck by 1 per level.\nDo you believe in luck?",
-  "effect.minecraft.mining_fatigue.desc": "Decreases attack speed by 10% per level. Time taken to break blocks is multiplied by 3^level.",
+  "effect.minecraft.luck.desc": "Increases your luck by 1 per [level].\nDo you believe in luck?",
+  "effect.minecraft.mining_fatigue.desc": "Decreases attack speed by 10% per [level]. Time taken to break blocks is multiplied by [3^level].",
   "effect.minecraft.nausea.desc": "You feel nauseous, your vision is warped and distorted.",
   "effect.minecraft.night_vision.desc": "Grants the ability to see in the dark.",
   "effect.minecraft.poison.desc.0": "You are poisoned and take 1HP of damage every 25 ticks.",
@@ -189,16 +200,16 @@
   "effect.minecraft.regeneration.desc.3": "Regenerates your health by 1HP every 6 ticks.",
   "effect.minecraft.regeneration.desc.4": "Regenerates your health by 1HP every 3 ticks.",
   "effect.minecraft.regeneration.desc.5": "Regenerates your health by 1HP every tick.",
-  "effect.minecraft.resistance.desc": "Reduces all damage taken by 20% per level.",
-  "effect.minecraft.saturation.desc": "Reprenishes your hunger bar by 1 point per level every tick.",
+  "effect.minecraft.resistance.desc": "Reduces all damage taken by 20% per [level].",
+  "effect.minecraft.saturation.desc": "Reprenishes your hunger bar by 1 point per [level] every tick.",
   "effect.minecraft.slow_falling.desc": "Decreases gravity acceleration on you by 8 m/s^2.",
-  "effect.minecraft.slowness.desc": "Decreases movement speed by 15% per level.",
-  "effect.minecraft.speed.desc": "Increases movement speed by 20% per level.",
-  "effect.minecraft.strength.desc": "Increases your melee damage by 3HP per level.",
-  "effect.minecraft.unluck.desc": "Decreases your luck by 1 per level.\nDo you believe in luck?",
+  "effect.minecraft.slowness.desc": "Decreases movement speed by 15% per [level].",
+  "effect.minecraft.speed.desc": "Increases movement speed by 20% per [level].",
+  "effect.minecraft.strength.desc": "Increases your melee damage by 3HP per [level].",
+  "effect.minecraft.unluck.desc": "Decreases your luck by 1 per [level].\nDo you believe in luck?",
   "effect.minecraft.water_breathing": "Water Breathing",
   "effect.minecraft.water_breathing.desc": "Grants the ability to breath underwater.",
-  "effect.minecraft.weakness.desc": "Decreases your melee damage by 4HP per level.",
+  "effect.minecraft.weakness.desc": "Decreases your melee damage by 4HP per [level].",
   "effect.minecraft.wither.desc.0": "You are withering and take 1HP of damage every 40 ticks.",
   "effect.minecraft.wither.desc.1": "You are withering and take 1HP of damage every 20 ticks.",
   "effect.minecraft.wither.desc.2": "You are withering and take 1HP of damage every 10 ticks.",
