--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -149,15 +149,26 @@
   "COMMENT_SPAWN_EGGS": "_________________________________________________________________________________________________________SPAWN EGGS",
   "item.evolution.cow_spawn_egg": "Ovo Gerador de Vaca",
   "COMMENT_STATUS EFFECT": "___________________________________________________________________________________________________STATUS EFFECT",
+  "effect.evolution.dehydration": "Desidratação",
+  "effect.evolution.dehydration.desc.0": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometerá funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n\nPode causar:\n ► Tontura",
+  "effect.evolution.dehydration.desc.1": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura",
+  "effect.evolution.dehydration.desc.2": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu severamente funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura\n\nAlém disso, você toma 1HP de dano a cada 80 ticks.",
+  "effect.evolution.dehydration.desc.3": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu severamente funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura\n\nAlém disso, você toma 1HP de dano a cada 40 ticks.",
+  "effect.evolution.dehydration.desc.4": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu severamente funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura\n\nAlém disso, você toma 1HP de dano a cada 20 ticks.",
+  "effect.evolution.dehydration.desc.5": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu severamente funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura\n\nAlém disso, você toma 1HP de dano a cada 10 ticks.",
+  "effect.evolution.dehydration.desc.6": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu severamente funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura\n\nAlém disso, você toma 1HP de dano a cada 5 ticks.",
+  "effect.evolution.dehydration.desc.7": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu severamente funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura\n\nAlém disso, você toma 1HP de dano a cada 2 ticks.",
+  "effect.evolution.dehydration.desc.8": "Sua injestão deficiente de água causou falta de água no seu corpo, o que comprometeu severamente funções metabólicas básicas.\n\nCausa:\n ► Desabilita a regeneração de vida natural\n ► Desabilita sua habilidade de correr\n ► Aumenta o consumo de energia\n ► Lentidão\n\nPode causar:\n ► Tontura\n\nAlém disso, você toma 1HP de dano a cada tick.",
   "effect.evolution.disoriented": "Desorientação",
   "effect.evolution.dizziness": "Tontura",
   "effect.evolution.hydration": "Hidratação",
-  "effect.evolution.hydration.desc": "Enche sua barra de sede em 1 ponto por nível a cada tick.",
+  "effect.evolution.hydration.desc": "Enche sua barra de sede em 1 ponto por [nível] a cada tick.",
   "effect.evolution.thirst": "Sede",
-  "effect.evolution.thirst.desc": "Você se sente sedento e consome 10% a mais de água por nível.",
+  "effect.evolution.thirst.desc": "Você se sente sedento e consome 10% a mais de água por [nível].",
   "effect.evolution.water_intoxication": "Intoxicação por Água",
-  "effect.evolution.water_intoxication.desc": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.\n\nPode causar:\n ► Fraqueza\n ► Náusea",
-  "effect.minecraft.absorption.desc": "Concede 4HP de vida adicional por nível. Vida adicional não pode ser regenerada.",
+  "effect.evolution.water_intoxication.desc.0": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, potencialmente atrapalhando funções cerebrais.\n\nPode causar:\n ► Fraqueza\n ► Náusea",
+  "effect.evolution.water_intoxication.desc.1": "Sua injestão excessiva de água colocou o equilíbrio normal de eletrolíticos do seu corpo fora dos limites seguros, o que atrapalhou funções cerebrais.\n\nPode causar:\n ► Fraqueza\n ► Náusea\n\nAlém disso, você toma [nível - 1]HP de dano a cada 40 ticks.",
+  "effect.minecraft.absorption.desc": "Concede 4HP de vida adicional por [nível]. Vida adicional não pode ser regenerada.",
   "effect.minecraft.bad_omen.desc": "Você tem uma sensação de que algo ruim está por vir.",
   "effect.minecraft.blindness.desc": "Sua visão está prejudicada.",
   "effect.minecraft.conduit_power.desc": "Você está sendo afetado(a) por um Conduite.\nO Conduite concede os seguintes efeitos:\n ► Pressa\n ► Respiração aquática\n ► Visão Noturna",
@@ -165,17 +176,17 @@
   "effect.minecraft.fire_resistance": "Resistência ao Fogo",
   "effect.minecraft.fire_resistance.desc": "Concede imunidade a dano de fogo.",
   "effect.minecraft.glowing.desc": "Você está brilhando e seu contorno pode ser visto através de paredes.",
-  "effect.minecraft.haste.desc": "Aumenta a velocidade de ataque em 10% por nível. Aumenta a velocidade de mineração em 20% por nível.",
-  "effect.minecraft.health_boost.desc": "Aumenta sua vida em 4HP por nível.",
+  "effect.minecraft.haste.desc": "Aumenta a velocidade de ataque em 10% por [nível]. Aumenta a velocidade de mineração em 20% por [nível].",
+  "effect.minecraft.health_boost.desc": "Aumenta sua vida em 4HP por [nível].",
   "effect.minecraft.hero_of_the_village.desc": "Você salvou a vila!\nPreços serão mais baixos para você. Você pode receber presentes daqueles que salvou.",
   "effect.minecraft.hunger.desc": "Você se sente faminto e queima mais calorias.",
-  "effect.minecraft.instant_damage.desc": "Inflinge 3 * 2^level HP de dano mágico instantâneo em criaturas vivas. Em contrapartida, criaturas mortas-vivas são curadas.",
-  "effect.minecraft.instant_health.desc": "Cura criaturas vivas em 2 * 2^level HP instantaneamente. Criaturas mortas-vivas tomarão dano, em vez disso.",
+  "effect.minecraft.instant_damage.desc": "Inflinge [3 * 2^nível]HP de dano mágico instantâneo em criaturas vivas. Em contrapartida, criaturas mortas-vivas são curadas.",
+  "effect.minecraft.instant_health.desc": "Cura criaturas vivas em [2 * 2^nível]HP instantaneamente. Criaturas mortas-vivas tomarão dano, em vez disso.",
   "effect.minecraft.invisibility.desc": "Torna você completamente invisível. Não torna seu equipamento invisível, no entanto.",
-  "effect.minecraft.jump_boost.desc": "Aumenta a força do pulo em 10% por nível.",
+  "effect.minecraft.jump_boost.desc": "Aumenta a força do pulo em 10% por [nível].",
   "effect.minecraft.levitation.desc": "Você se torna menos denso(a) que o ar e começa a flutuar.",
-  "effect.minecraft.luck.desc": "Aumenta sua sorte em 1 por nível.\nVocê acredita em sorte?",
-  "effect.minecraft.mining_fatigue.desc": "Diminui a velocidade de ataque em 10% por nível. O tempo levado para quebrar blocos é multiplicado por 3^nível",
+  "effect.minecraft.luck.desc": "Aumenta sua sorte em 1 por [nível].\nVocê acredita em sorte?",
+  "effect.minecraft.mining_fatigue.desc": "Diminui a velocidade de ataque em 10% por [nível]. O tempo levado para quebrar blocos é multiplicado por [3^nível]",
   "effect.minecraft.nausea.desc": "Você se sente nauseado(a), sua visão é deformada e distorcida.",
   "effect.minecraft.night_vision.desc": "Concede a habilidade de enxergar no escuro.",
   "effect.minecraft.poison.desc.0": "Você está envenenado(a) e toma 1HP de dano a cada 25 ticks.",
@@ -189,16 +200,16 @@
   "effect.minecraft.regeneration.desc.3": "Regenera a sua vida em 1HP a cada 6 ticks.",
   "effect.minecraft.regeneration.desc.4": "Regenera a sua vida em 1HP a cada 3 ticks.",
   "effect.minecraft.regeneration.desc.5": "Regenera a sua vida em 1HP a cada tick.",
-  "effect.minecraft.resistance.desc": "Reduz todo o dano tomado em 20% por nível.",
-  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 ponto por nível a cada tick.",
+  "effect.minecraft.resistance.desc": "Reduz todo o dano tomado em 20% por [nível].",
+  "effect.minecraft.saturation.desc": "Enche sua barra de fome em 1 ponto por [nível] a cada tick.",
   "effect.minecraft.slow_falling.desc": "Diminui a aceleração da gravidade em você em 8 m/s^2.",
-  "effect.minecraft.slowness.desc": "Diminui a velocidade de movimentação em 15% por nível.",
-  "effect.minecraft.speed.desc": "Aumenta a velocidade de movimentação em 20% por nível.",
-  "effect.minecraft.strength.desc": "Aumenta o seu dano corpo a corpo em 3HP por nível.",
-  "effect.minecraft.unluck.desc": "Diminui sua sorte em 1 por nível.\nVocê acredita em sorte?",
+  "effect.minecraft.slowness.desc": "Diminui a velocidade de movimentação em 15% por [nível].",
+  "effect.minecraft.speed.desc": "Aumenta a velocidade de movimentação em 20% por [nível].",
+  "effect.minecraft.strength.desc": "Aumenta o seu dano corpo a corpo em 3HP por [nível].",
+  "effect.minecraft.unluck.desc": "Diminui sua sorte em 1 por [nível].\nVocê acredita em sorte?",
   "effect.minecraft.water_breathing": "Respiração Aquática",
   "effect.minecraft.water_breathing.desc": "Concede a habilidade de respirar debaixo d'água.",
-  "effect.minecraft.weakness.desc": "Diminui o seu dano corpo a corpo em 4HP por nível.",
+  "effect.minecraft.weakness.desc": "Diminui o seu dano corpo a corpo em 4HP por [nível].",
   "effect.minecraft.wither.desc.0": "Você está apodrecendo e toma 1HP de dano a cada 40 ticks.",
   "effect.minecraft.wither.desc.1": "Você está apodrecendo e toma 1HP de dano a cada 20 ticks.",
   "effect.minecraft.wither.desc.2": "Você está apodrecendo e toma 1HP de dano a cada 10 ticks.",
