Added missing localization tags.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -3,6 +3,7 @@
   "generator.ev_default": "Evolution World",
   "generator.ev_flat": "Evolution Flat",
   "COMMENT_CREATIVE_TABS": "___________________________________________________________________________________________________CREATIVE TABS",
+  "itemGroup.evolution.dev": "Developer Items",
   "itemGroup.evolution.eggs": "Spawn Eggs",
   "itemGroup.evolution.liquids": "Liquids and Containers",
   "itemGroup.evolution.misc": "Misc",
@@ -402,6 +403,22 @@
   "evolution.gui.puzzle.checkBB": "Check Bounding Box:",
   "evolution.gui.puzzle.finalState": "Turns Into:",
   "evolution.gui.puzzle.targetPool": "Target Pool:",
+  "evolution.gui.schematic.detectSize": "Detect",
+  "evolution.gui.schematic.entities": "Include Entities",
+  "evolution.gui.schematic.integrity": "Schematic Integrity and Seed",
+  "evolution.gui.schematic.load": "Load",
+  "evolution.gui.schematic.mode.corner": "Corner",
+  "evolution.gui.schematic.mode.load": "Load",
+  "evolution.gui.schematic.mode.save": "Save",
+  "evolution.gui.schematic.modeInfo.corner": "Corner Mode - Placement and Size Marker",
+  "evolution.gui.schematic.modeInfo.load": "Load Mode - Load from File",
+  "evolution.gui.schematic.modeInfo.save": "Save Mode - Write to File",
+  "evolution.gui.schematic.name": "Schematic Name",
+  "evolution.gui.schematic.pos": "Relative Position",
+  "evolution.gui.schematic.save": "Save",
+  "evolution.gui.schematic.showAir": "Show Invisible Blocks",
+  "evolution.gui.schematic.showBB": "Show Bounding Box",
+  "evolution.gui.schematic.size": "Schematic Size",
   "evolution.gui.stats.damageButton": "Damage",
   "evolution.gui.stats.damageDealtActual": "Actual Damage Dealt",
   "evolution.gui.stats.damageDealtRaw": "Raw Damage Dealt",
