--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -3,6 +3,7 @@
   "generator.ev_default": "Mundo Evolution",
   "generator.ev_flat": "Superplano Evolution",
   "COMMENT_CREATIVE_TABS": "___________________________________________________________________________________________________CREATIVE TABS",
+  "itemGroup.evolution.dev": "Itens de Desenvolvedor",
   "itemGroup.evolution.eggs": "Ovos de Spawn",
   "itemGroup.evolution.liquids": "Líquidos e Recipientes",
   "itemGroup.evolution.misc": "Diversos",
@@ -402,6 +403,22 @@
   "evolution.gui.puzzle.checkBB": "Checar caixa delimitadora:",
   "evolution.gui.puzzle.finalState": "Se transforma em:",
   "evolution.gui.puzzle.targetPool": "Pool desejada:",
+  "evolution.gui.schematic.detectSize": "Detectar",
+  "evolution.gui.schematic.entities": "Incluir Entidades",
+  "evolution.gui.schematic.integrity": "Integridade e Seed do Esquema",
+  "evolution.gui.schematic.load": "Carregar",
+  "evolution.gui.schematic.mode.corner": "Canto",
+  "evolution.gui.schematic.mode.load": "Carregar",
+  "evolution.gui.schematic.mode.save": "Salvar",
+  "evolution.gui.schematic.modeInfo.corner": "Modo de Canto - Marcador de Posição e Tamanho",
+  "evolution.gui.schematic.modeInfo.load": "Modo de Carregamento - Carregar dum Arquivo",
+  "evolution.gui.schematic.modeInfo.save": "Modo de Salvamento - Salvar num Arquivo",
+  "evolution.gui.schematic.name": "Nome do Esquema",
+  "evolution.gui.schematic.pos": "Posição Relativa",
+  "evolution.gui.schematic.save": "Salvar",
+  "evolution.gui.schematic.showAir": "Mostrar Blocos Invisíveis",
+  "evolution.gui.schematic.showBB": "Mostrar Caixa Delimitadora",
+  "evolution.gui.schematic.size": "Tamanho do Esquema",
   "evolution.gui.stats.damageButton": "Dano",
   "evolution.gui.stats.damageDealtActual": "Dano Causado Real",
   "evolution.gui.stats.damageDealtRaw": "Dano Causado Bruto",
