--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -231,8 +231,8 @@
   "evolution.subtitle.soil_collapse": "Landslide",
   "evolution.subtitle.stone_break": "Stone breaks",
   "evolution.subtitle.stone_collapse": "Collapsing rocks",
-  "evolution.subtitle.sword_sheath": "Sheathed sword",
-  "evolution.subtitle.sword_unsheath": "Drawn sword",
+  "evolution.subtitle.sword_sheathe": "Sheathed sword",
+  "evolution.subtitle.sword_unsheathe": "Drawn sword",
   "evolution.subtitle.tree_falling": "Tree falling",
   "evolution.subtitle.wood_collapse": "Wood Collapsing",
   "COMMENT_DEATH_MESSAGES": "_________________________________________________________________________________________________DEATH MESSAGES",
