Added Firewood. Removed Log Piles in favor of Firewood Piles.

--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -489,6 +489,7 @@
   "evolution.tooltip.distance": "%1$s Reach Distance",
   "evolution.tooltip.durability": "%1$s Durability",
   "evolution.tooltip.fireAspect": " ► %1$s Fire Aspect %2$s",
+  "evolution.tooltip.firewoodPile": " Place while sneaking to pile up",
   "evolution.tooltip.heavyAttack": " ► %1$s Heavy Attack %2$s",
   "evolution.tooltip.knockback": " ► Knockback %1$s",
   "evolution.tooltip.lunge": "Lunge",
@@ -876,6 +877,24 @@
   "item.evolution.clock": "Clock",
   "item.evolution.debug_item": "Debug Item",
   "item.evolution.fire_starter": "Fire Starter",
+  "item.evolution.firewood_acacia": "Acacia Firewood",
+  "item.evolution.firewood_aspen": "Aspen Firewood",
+  "item.evolution.firewood_birch": "Birch Firewood",
+  "item.evolution.firewood_cedar": "Cedar Firewood",
+  "item.evolution.firewood_ebony": "Ebony Firewood",
+  "item.evolution.firewood_elm": "Elm Firewood",
+  "item.evolution.firewood_eucalyptus": "Eucalyptus Firewood",
+  "item.evolution.firewood_fir": "Fir Firewood",
+  "item.evolution.firewood_kapok": "Kapok Firewood",
+  "item.evolution.firewood_mangrove": "Mangrove Firewood",
+  "item.evolution.firewood_maple": "Maple Firewood",
+  "item.evolution.firewood_oak": "Oak Firewood",
+  "item.evolution.firewood_old_oak": "Old Oak Firewood",
+  "item.evolution.firewood_palm": "Palm Firewood",
+  "item.evolution.firewood_pine": "Pine Firewood",
+  "item.evolution.firewood_redwood": "Redwood Firewood",
+  "item.evolution.firewood_spruce": "Spruce Firewood",
+  "item.evolution.firewood_willow": "Willow Firewood",
   "item.evolution.hammer_andesite": "Andesite Hammer",
   "item.evolution.hammer_basalt": "Basalt Hammer",
   "item.evolution.hammer_chalk": "Chalk Hammer",
