--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -489,6 +489,7 @@
   "evolution.tooltip.distance": "%1$s Distância de Alcance",
   "evolution.tooltip.durability": "%1$s Durabilidade",
   "evolution.tooltip.fireAspect": " ► %1$s Aspecto Flamejante %2$s",
+  "evolution.tooltip.firewoodPile": " Coloque enquanto agachado para empilhar",
   "evolution.tooltip.heavyAttack": " ► %1$s Ataque Pesado %2$s",
   "evolution.tooltip.knockback": " ► Repulsão %1$s",
   "evolution.tooltip.lunge": "Estocada",
@@ -876,6 +877,24 @@
   "item.evolution.clock": "Relógio",
   "item.evolution.debug_item": "Item de Depuração",
   "item.evolution.fire_starter": "Acendedor de Fogo",
+  "item.evolution.firewood_acacia": "Lenha de Acácia",
+  "item.evolution.firewood_aspen": "Lenha de Choupo",
+  "item.evolution.firewood_birch": "Lenha de Bétula",
+  "item.evolution.firewood_cedar": "Lenha de Cedro",
+  "item.evolution.firewood_ebony": "Lenha de Ébano",
+  "item.evolution.firewood_elm": "Lenha de Ulmeiro",
+  "item.evolution.firewood_eucalyptus": "Lenha de Eucalipto",
+  "item.evolution.firewood_fir": "Lenha de Abeto",
+  "item.evolution.firewood_kapok": "Lenha de Sumaúma",
+  "item.evolution.firewood_mangrove": "Lenha de Árvore de Manguezal",
+  "item.evolution.firewood_maple": "Lenha de Bordo",
+  "item.evolution.firewood_oak": "Lenha de Carvalho",
+  "item.evolution.firewood_old_oak": "Lenha de Carvalho Ancião",
+  "item.evolution.firewood_palm": "Lenha de Palmeira",
+  "item.evolution.firewood_pine": "Lenha de Pinus",
+  "item.evolution.firewood_redwood": "Lenha de Sequoia",
+  "item.evolution.firewood_spruce": "Lenha de Pinheiro",
+  "item.evolution.firewood_willow": "Lenha de Salgueiro",
   "item.evolution.hammer_andesite": "Martelo de Andesito",
   "item.evolution.hammer_basalt": "Martelo de Basalto",
   "item.evolution.hammer_chalk": "Martelo de Giz",
