--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -656,24 +656,24 @@
   "block.evolution.leaves_redwood": "Folhas de Sequoia",
   "block.evolution.leaves_spruce": "Folhas de Pinheiro",
   "block.evolution.leaves_willow": "Folhas de Salgueiro",
-  "block.evolution.log_acacia": "Tronco de Acácia",
-  "block.evolution.log_aspen": "Tronco de Choupo",
-  "block.evolution.log_birch": "Tronco de Bétula",
-  "block.evolution.log_cedar": "Tronco de Cedro",
-  "block.evolution.log_ebony": "Tronco de Ébano",
-  "block.evolution.log_elm": "Tronco de Ulmeiro",
-  "block.evolution.log_eucalyptus": "Tronco de Eucalipto",
-  "block.evolution.log_fir": "Tronco de Abeto",
-  "block.evolution.log_kapok": "Tronco de Sumaúma",
-  "block.evolution.log_mangrove": "Tronco de Árvore de Manguezal",
-  "block.evolution.log_maple": "Tronco de Bordo",
-  "block.evolution.log_oak": "Tronco de Carvalho",
-  "block.evolution.log_old_oak": "Tronco de Carvalho Ancião",
-  "block.evolution.log_palm": "Tronco de Palmeira",
-  "block.evolution.log_pine": "Tronco de Pinus",
-  "block.evolution.log_redwood": "Tronco de Sequoia",
-  "block.evolution.log_spruce": "Tronco de Pinheiro",
-  "block.evolution.log_willow": "Tronco de Salgueiro",
+  "block.evolution.log_acacia": "Tora de Acácia",
+  "block.evolution.log_aspen": "Tora de Choupo",
+  "block.evolution.log_birch": "Tora de Bétula",
+  "block.evolution.log_cedar": "Tora de Cedro",
+  "block.evolution.log_ebony": "Tora de Ébano",
+  "block.evolution.log_elm": "Tora de Ulmeiro",
+  "block.evolution.log_eucalyptus": "Tora de Eucalipto",
+  "block.evolution.log_fir": "Tora de Abeto",
+  "block.evolution.log_kapok": "Tora de Sumaúma",
+  "block.evolution.log_mangrove": "Tora de Árvore de Manguezal",
+  "block.evolution.log_maple": "Tora de Bordo",
+  "block.evolution.log_oak": "Tora de Carvalho",
+  "block.evolution.log_old_oak": "Tora de Carvalho Ancião",
+  "block.evolution.log_palm": "Tora de Palmeira",
+  "block.evolution.log_pine": "Tora de Pinus",
+  "block.evolution.log_redwood": "Tora de Sequoia",
+  "block.evolution.log_spruce": "Tora de Pinheiro",
+  "block.evolution.log_willow": "Tora de Salgueiro",
   "block.evolution.mold_clay_axe": "Molde de Cabeça de Machado de Argila",
   "block.evolution.mold_clay_guard": "Molde de Guarda de Espada de Argila",
   "block.evolution.mold_clay_hammer": "Molde de Cabeça de Martelo de Argila",
