Added the pause command and the ability to pause multiplayer games.

--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -52,6 +52,12 @@
   "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
   "command.evolution.date.error": "A data não pode ser definida antes de %1$s às %2$s",
   "command.evolution.date.success": "A data foi mudada para %1$s",
+  "command.evolution.pause.pause.fail": "O jogo já está pausado. Use /resume para retomar o jogo",
+  "command.evolution.pause.pause.info": "O jogo foi pausado globalmente",
+  "command.evolution.pause.pause.success": "O jogo foi pausado para todos. Use /resume para retomar o jogo",
+  "command.evolution.pause.resume.fail": "O jogo já está retomado",
+  "command.evolution.pause.resume.info": "O jogo foi retomado globalmente",
+  "command.evolution.pause.resume.success": "O jogo foi retomado para todos",
   "command.evolution.tickrate": "A tickrate do jogo foi mudada para %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.build_assist": "Assistente de construção",
