--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -52,6 +52,12 @@
   "COMMENT_COMMANDS": "_____________________________________________________________________________________________________________COMMANDS",
   "command.evolution.date.error": "The date cannot be set before %1$s at %2$s",
   "command.evolution.date.success": "The date has been changed to %1$s",
+  "command.evolution.pause.pause.fail": "The game is already paused. Use /resume to resume the game",
+  "command.evolution.pause.pause.info": "The game has been paused globally",
+  "command.evolution.pause.pause.success": "The game has been paused for everyone. Use /resume to resume the game",
+  "command.evolution.pause.resume.fail": "The game is already resumed",
+  "command.evolution.pause.resume.info": "The game has been resumed globally",
+  "command.evolution.pause.resume.success": "The game has been resumed for everyone",
   "command.evolution.tickrate": "The game tickrate was changed to %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.build_assist": "Build Assist",
