Improved the tickrate command.

--- a/src/main/resources/assets/evolution/lang/pt_br.json
+++ b/src/main/resources/assets/evolution/lang/pt_br.json
@@ -58,7 +58,8 @@
   "command.evolution.pause.resume.fail": "O jogo já está retomado",
   "command.evolution.pause.resume.info": "O jogo foi retomado globalmente",
   "command.evolution.pause.resume.success": "O jogo foi retomado para todos",
-  "command.evolution.tickrate": "A tickrate do jogo foi mudada para %1$s TPS",
+  "command.evolution.tickrate.change": "A tickrate do jogo foi mudada para %1$s TPS",
+  "command.evolution.tickrate.current": "A tickrate atual do jogo é %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.build_assist": "Assistente de construção",
   "key.keyboard.left.control": "Ctrl esquerdo",
