--- a/src/main/resources/assets/evolution/lang/en_us.json
+++ b/src/main/resources/assets/evolution/lang/en_us.json
@@ -58,7 +58,8 @@
   "command.evolution.pause.resume.fail": "The game is already resumed",
   "command.evolution.pause.resume.info": "The game has been resumed globally",
   "command.evolution.pause.resume.success": "The game has been resumed for everyone",
-  "command.evolution.tickrate": "The game tickrate was changed to %1$s TPS",
+  "command.evolution.tickrate.change": "The game tickrate was changed to %1$s TPS",
+  "command.evolution.tickrate.current": "The current game tickrate is %1$s TPS",
   "COMMENT_KEYS": "_____________________________________________________________________________________________________________________KEYS",
   "key.build_assist": "Build Assist",
   "key.keyboard.left.control": "Left Control",
